--- a/index.html
+++ b/index.html
@@ -41,75 +41,56 @@
 
   <!-- Main content  -->
   <main>
-    <!-- Food Menu -->
-    <section class="food-menu">
-      <div class="container">
-        <h2 class="text-center mb-4"><span class="heading-border">Food Menu</span></h2>
+    <!-- Band Details  -->
+    <section>
+      <div class="container-fluid bg-success p-4">
         <div class="row">
-          <div class="col-md-3">
-            <div class="card">
-              <img src="img/food/Chicken-Burger.jpg" class="card-img-top" alt="Chicken Burger">
-              <div class="card-body">
-                <h5 class="card-title text-center">Chicken Burger</h5>
-                <p class="card-text card-text-custom">A chicken burger makes for a quick midweek meal or weekend BBQ's with friends!
-                  Crispy seasoned chicken breast, topped with mandatory melted cheese, piled onto soft rolls with onion,
-                  avocado, lettuce, tomato and garlic mayo.</p>
-              </div>
-              <div class="card-footer">
-                <p class="btn btn-primary w-100">price: 299TK</p>
-              </div>
+          <div class="col">
+            <h2 class="text-center">Band Image</h2>
+            <img class="img-fluid" src="image/pexels-brett-sayles-2221318.jpg" alt="image">
+          </div>
+          <div class="col">
+            <h2>Band Details</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis tempore omnis dolor inventore
+              iure ducimus nostrum non dicta dolore.</p>
+            <h2>Band Info.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis tempore omnis dolor inventore
+              iure ducimus nostrum non dicta dolore.</p>
+          </div>
+        </div>
+
+      </div>
+    </section>
+    <!-- Member Profile Section  -->
+    <section class="container-fluid bg-danger P-3">
+      <div class="container">
+        <div class="row P-3">
+          <h2 class="text-center border p-3 mt-2">Card Image</h2>
+          <div class="card col mx-2">
+            <img class="card-img-top" src="image/pexels-brett-sayles-2479312.jpg" alt="Card image">
+            <div class="card-body text-center">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
             </div>
           </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="img/food/Meat Box.jpg" class="card-img-top" alt="Meat Box">
-              <div class="card-body">
-                <h5 class="card-title text-center">Meat Box</h5>
-                <p class="card-text card-text-custom">Think outside the Box and save yourself some time and effort by getting your
-                  favourite Meat Box delivered. Upgrade to subscription for meat on repeat! Choose your delivery
-                  frequency and leave the rest to us. Enjoy doorstep delivery on your terms, plus get free delivery as a
-                  big</p>
-              </div>
-              <div class="card-footer">
-                <p class="btn btn-primary w-100">price: 155TK</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="img/food/Sandwich.jpg" class="card-img-top" alt="Sandwich">
-              <div class="card-body">
-                <h5 class="card-title text-center">Sandwich</h5>
-                <p class="card-text card-text-custom">A sandwich is a dish typically consisting of vegetables, sliced cheese or meat,
-                  placed on or between slices of bread, or more generally any dish wherein bread serves as a container
-                  or wrapper for another food type.</p>
-              </div>
-              <div class="card-footer">
-                <p class="btn btn-primary w-100">price: 350TK</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3">
-            <div class="card">
-              <img src="img/food/pasta.jpg" class="card-img-top" alt="Pasta">
-              <div class="card-body">
-                <h5 class="card-title text-center">Pasta</h5>
-                <p class="card-text card-text-custom">Pasta is a type of food typically made from an unleavened dough of wheat flour
-                  mixed with water or eggs, and formed into sheets or other shapes.</p>
-              </div>
-              <div class="card-footer">
-                <p class="btn btn-primary w-100">price: 359TK</p>
-              </div>
+
+          <div class="card col mx-2">
+            <img class="card-img-top" src="image/pexels-malcolmhill-12444472.jpg" alt="Card image">
+            <div class="card-body text-center">
+              <h4 class="card-title">John Doe</h4>
+              <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+              <a href="#" class="btn btn-primary">See Profile</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- Customer Feedback  -->
+    
+    <!-- Fans Feedback  -->
     <section class="customer-feedback text-center">
       <div class="container">
-        <h2 class="mb-4"><span class="heading-border">Customer Feedback</span></h2>
+        <h2 class="mb-4"><span class="heading-border">Fans Feedback</span></h2>
         <div class="row">
           <div class="col-md-6">
             <img src="img/feedback/feedback-1.jpg" class="rounded-circle mb-2" alt="Customer 1">
@@ -129,28 +110,28 @@
         <h2 class="mb-4"><span class="heading-border">Gallery</span></h2>
         <div class="row">
           <div class="col-md-3">
-            <img src="img/food/Meat Box.jpg" class="img-fluid mb-2" alt="Gallery 1">
+            <img src="img/gallery/gallery-1.jpg" class="img-fluid mb-2" alt="Gallery 1">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Chicken-Burger.jpg" class="img-fluid mb-2" alt="Gallery 2">
+            <img src="img/gallery/gallery-2.jpg" class="img-fluid mb-2" alt="Gallery 2">
           </div>
           <div class="col-md-3">
-            <img src="img/food/pasta.jpg" class="img-fluid mb-2" alt="Gallery 3">
+            <img src="img/gallery/gallery-3.jpg" class="img-fluid mb-2" alt="Gallery 3">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Sandwich.jpg" class="img-fluid mb-2" alt="Gallery 4">
+            <img src="img/gallery/gallery-4.jpg" class="img-fluid mb-2" alt="Gallery 4">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Chicken-Burger.jpg" class="img-fluid mb-2" alt="Gallery 3">
+            <img src="img/gallery/gallery-5.jpg" class="img-fluid mb-2" alt="Gallery 3">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Sandwich.jpg" class="img-fluid mb-2" alt="Gallery 4">
+            <img src="img/gallery/gallery-6.jpg" class="img-fluid mb-2" alt="Gallery 4">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Chicken-Burger.jpg" class="img-fluid mb-2" alt="Gallery 3">
+            <img src="img/gallery/gallery-7.jpg" class="img-fluid mb-2" alt="Gallery 3">
           </div>
           <div class="col-md-3">
-            <img src="img/food/Sandwich.jpg" class="img-fluid mb-2" alt="Gallery 4">
+            <img src="img/gallery/gallery-8.jpg" class="img-fluid mb-2" alt="Gallery 4">
           </div>
         </div>
       </div>
