--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">Staff Profile</span></h2>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-md-4 mb-2">
             <div class="card h-100">
               <img src="img/Staff/Staff-1.jpg" class="card-img-top" alt="Staff 1">
               <div class="card-body">
@@ -56,7 +56,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-2">
             <div class="card h-100">
               <img src="img/Staff/Staff-2.jpg" class="card-img-top" alt="Staff 2">
               <div class="card-body">
@@ -65,7 +65,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 mb-2">
             <div class="card h-100">
               <img src="img/Staff/Staff-3.jpg" class="card-img-top" alt="Staff 3">
               <div class="card-body">
