--- a/faq.html
+++ b/faq.html
@@ -43,34 +43,25 @@
     <!-- FAQ -->
     <section class="p-4 bg-success-subtle">
       <h3 class="text-center border-bottom pb-2"><span class="heading-border">Frequenty Asked Question</span></h3>
-      <button class="faqQuestion">What types of events does BD Food Shop cater?</button>
+      <button class="faqQuestion">What genres of music does Shonar Bangla Music Band perform?</button>
       <div class="faqAnswer">
-        BD Food Shop caters a wide variety of events! We can handle everything from corporate lunches and business
-        meetings to weddings, birthday parties, graduation celebrations, and more.
+        Shonar Bangla Music Band performs a variety of Bangladeshi music genres, including folk, rock, and fusion.
       </div>
-      <button class="faqQuestion">Do you offer customizable menus?</button>
+      <button class="faqQuestion">How can I book Shonar Bangla Music Band for a performance?</button>
       <div class="faqAnswer">
-        Absolutely! We understand that every event is unique, which is why we work with you to create a menu that
-        perfectly fits your taste and budget. Whether you have dietary restrictions or a specific theme in mind, we can
-        create a menu that exceeds your expectations.
+        For booking inquiries, please visit our website's contact page or send an email to [booking email address].
       </div>
-      <button class="faqQuestion">How far in advance do I need to order catering?</button>
+      <button class="faqQuestion">Does Shonar Bangla Music Band have any upcoming performances?</button>
       <div class="faqAnswer">
-        The ideal notice period depends on the size and complexity of your event. To ensure we have ample time to
-        prepare the freshest food and fulfill your specific requests, we recommend placing your order at least 72 hours
-        in advance. However, if your event is on a short timeline, feel free to contact us. We'll do our best to
-        accommodate your needs.
+        You can find our upcoming performances listed on the "Events" section of our website and on our social media pages.
       </div>
-      <button class="faqQuestion">Do you provide staff for catered events?</button>
+      <button class="faqQuestion">Can I buy Shonar Bangla Music Band's music online?</button>
       <div class="faqAnswer">
-        Yes, BD Food Shop offers a range of staffing options to ensure your event runs smoothly. We can provide servers,
-        bartenders, and even chefs to take care of everything from food preparation and service to cleanup.
+        Yes, our music is available for purchase on popular online music platforms like [Platform 1], [Platform 2], etc.
       </div>
-      <button class="faqQuestion">What are your payment terms?</button>
+      <button class="faqQuestion">How did Shonar Bangla Music Band get its name?</button>
       <div class="faqAnswer">
-        We require a deposit of [percentage] to confirm your booking. The remaining balance is typically due [number]
-        days before your event. We accept various payment methods for your convenience. For further details on our
-        payment terms, please visit our "Order & Payment" page or contact us directly.
+        The name "Shonar Bangla" translates to "Golden Bengal" and reflects the band's love for Bengali culture and heritage.
       </div>
     </section>
   </main>
