--- a/index.html
+++ b/index.html
@@ -41,26 +41,28 @@
 
   <!-- Main content  -->
   <main>
-    <!-- Band Details  -->
-    <section>
-      <div class="container-fluid bg-success p-4">
+   <!-- Head of Institute  -->
+   <section class="band-details">
+    <div class="container">
+      <h2 class="mb-4"><span class="heading-border">Head of Institute</span></h2>
         <div class="row">
-          <div class="col">
-            <h2 class="text-center">Band Image</h2>
-            <img class="img-fluid" src="image/pexels-brett-sayles-2221318.jpg" alt="image">
-          </div>
-          <div class="col">
-            <h2>Band Details</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis tempore omnis dolor inventore
-              iure ducimus nostrum non dicta dolore.</p>
-            <h2>Band Info.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia officiis tempore omnis dolor inventore
-              iure ducimus nostrum non dicta dolore.</p>
-          </div>
+            <div class="col-md-4 mb-2">
+                <img class="img-fluid" src="img/details/details.jpg" alt="Band Owner">
+            </div>
+            <div class="col-md-8 mb-2 ps-5">
+                <h4>Band Location:</h4>
+                <p class="ps-5">
+                  Bogura, Rajshahi Division, Bangladesh
+                </p>
+                <h4>Song Type:</h4>
+                <p class="ps-5">Folk, Rock, Fusion</p>
+                <h4>Members:</h4>
+                <p class="ps-5">Vocal: Sabina Yasmin, Guitar: Rony Khan, Drums: Jamal Hossain, Bass: Ali Ahmed</p>
+            </div>
         </div>
+    </div>
+</section>
 
-      </div>
-    </section>
     <!-- Member Profile Section  -->
     <section class="container-fluid bg-danger P-3">
       <div class="container">
