--- a/index.html
+++ b/index.html
@@ -41,54 +41,71 @@
 
   <!-- Main content  -->
   <main>
-   <!-- Head of Institute  -->
-   <section class="band-details">
-    <div class="container">
-      <h2 class="mb-4"><span class="heading-border">Head of Institute</span></h2>
-        <div class="row">
-            <div class="col-md-4 mb-2">
-                <img class="img-fluid" src="img/details/details.jpg" alt="Band Owner">
-            </div>
-            <div class="col-md-8 mb-2 ps-5">
-                <h4>Band Location:</h4>
-                <p class="ps-5">
-                  Bogura, Rajshahi Division, Bangladesh
-                </p>
-                <h4>Song Type:</h4>
-                <p class="ps-5">Folk, Rock, Fusion</p>
-                <h4>Members:</h4>
-                <p class="ps-5">Vocal: Sabina Yasmin, Guitar: Rony Khan, Drums: Jamal Hossain, Bass: Ali Ahmed</p>
-            </div>
-        </div>
-    </div>
-</section>
-
-    <!-- Member Profile Section  -->
-    <section class="container-fluid bg-danger P-3">
+    <!-- Band Details  -->
+    <section class="py-5">
       <div class="container">
-        <div class="row P-3">
-          <h2 class="text-center border p-3 mt-2">Card Image</h2>
-          <div class="card col mx-2">
-            <img class="card-img-top" src="image/pexels-brett-sayles-2479312.jpg" alt="Card image">
-            <div class="card-body text-center">
-              <h4 class="card-title">John Doe</h4>
-              <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+        <h2 class="mb-4 text-center"><span class="heading-border">Band Details</span></h2>
+        <div class="row">
+          <div class="col-md-4 mb-2">
+            <img class="img-fluid" src="img/details/details.jpg" alt="Band Owner">
+            <h4 class="text-center">Head of Institute</h4>
+          </div>
+          <div class="col-md-8 mb-2 ps-5">
+            <h4>Band Location:</h4>
+            <p class="ps-5">
+              Bogura, Rajshahi Division, Bangladesh
+            </p>
+            <h4>Song Type:</h4>
+            <p class="ps-5">Folk, Rock, Fusion</p>
+            <h4>Members:</h4>
+            <p class="ps-5">Vocal: Sabina Yasmin, Guitar: Rony Khan, Drums: Jamal Hossain, Bass: Ali Ahmed</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Members Profile -->
+    <section class="member-profile">
+      <div class="container">
+        <h2 class="text-center section-title"><span class="heading-border">Members Profile</span></h2>
+        <div class="row">
+          <div class="col-md-4 mb-2">
+            <div class="card h-100">
+              <img src="img/profile/member-1.jpg" class="card-img-top" alt="Member 1">
+              <div class="card-body">
+                <h5 class="card-title text-center">Vocal: Sabina Yasmin</h5>
+                <p class="card-text card-text-justify">
+                  She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on delivering a clear and compelling vocal performance.
+                </p>
+              </div>
             </div>
           </div>
-
-          <div class="card col mx-2">
-            <img class="card-img-top" src="image/pexels-malcolmhill-12444472.jpg" alt="Card image">
-            <div class="card-body text-center">
-              <h4 class="card-title">John Doe</h4>
-              <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+          <div class="col-md-4 mb-2">
+            <div class="card h-100">
+              <img src="img/profile/member-2.jpg" class="card-img-top" alt="Member 2">
+              <div class="card-body">
+                <h5 class="card-title text-center">Guitar: Rony Khan</h5>
+                <p class="card-text card-text-justify">
+                  He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-2">
+            <div class="card h-100">
+              <img src="img/profile/member-3.jpg" class="card-img-top" alt="Member 3">
+              <div class="card-body">
+                <h5 class="card-title text-center">Drums: Jamal Hossain</h5>
+                <p class="card-text card-text-justify">
+                  He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his ability to create a groove that complements the melody and other instruments.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    
+
     <!-- Fans Feedback  -->
     <section class="customer-feedback text-center">
       <div class="container">
