--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <!-- Members Profile -->
-    <section class="member-profile">
+    <section class="member-profile bg-success-subtle">
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">Members Profile</span></h2>
         <div class="row">
