--- a/about.html
+++ b/about.html
@@ -42,36 +42,43 @@
   <!-- Main content  -->
   <main>
     <!-- Stuff Profile -->
-    <section class="staff-profile">
+    <section class="member-profile bg-success-subtle">
       <div class="container">
-        <h2 class="text-center section-title"><span class="heading-border">Staff Profile</span></h2>
+        <h2 class="text-center section-title"><span class="heading-border">Stuff Profile</span></h2>
         <div class="row">
           <div class="col-md-4 mb-2">
             <div class="card h-100">
-              <img src="img/Staff/Staff-1.jpg" class="card-img-top" alt="Staff 1">
+              <img src="img/profile/member-1.jpg" class="card-img-top" alt="Member 1">
               <div class="card-body">
-                <h5 class="card-title text-center">Staff 1</h5>
-                <p class="card-text card-text-justify">This is a longer card with supporting text below as a natural lead-in to additional
-                  content. This content is a little bit longer.</p>
+                <h5 class="card-title text-center">Vocal: Sabina Yasmin</h5>
+                <p class="card-text card-text-justify">
+                  She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on
+                  delivering a clear and compelling vocal performance.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-2">
             <div class="card h-100">
-              <img src="img/Staff/Staff-2.jpg" class="card-img-top" alt="Staff 2">
+              <img src="img/profile/member-2.jpg" class="card-img-top" alt="Member 2">
               <div class="card-body">
-                <h5 class="card-title text-center">Staff 2</h5>
-                <p class="card-text card-text-justify">This is a short card.</p>
+                <h5 class="card-title text-center">Guitar: Rony Khan</h5>
+                <p class="card-text card-text-justify">
+                  He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature
+                  his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.
+                </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-2">
             <div class="card h-100">
-              <img src="img/Staff/Staff-3.jpg" class="card-img-top" alt="Staff 3">
+              <img src="img/profile/member-3.jpg" class="card-img-top" alt="Member 3">
               <div class="card-body">
-                <h5 class="card-title text-center">Staff 3</h5>
-                <p class="card-text card-text-justify">This is a longer card with supporting text below as a natural lead-in to additional
-                  content.</p>
+                <h5 class="card-title text-center">Drums: Jamal Hossain</h5>
+                <p class="card-text card-text-justify">
+                  He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his
+                  ability to create a groove that complements the melody and other instruments.
+                </p>
               </div>
             </div>
           </div>
@@ -90,15 +97,16 @@
           <div class="col-md-6">
             <div class="card h-100">
               <div class="card-body">
-                <h5 class="card-title">Company Name</h5>
-                <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus fugit tempore
-                  sint dolores architecto iure odio ea labore aperiam accusantium!</p>
-                <h6>About</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, minus ex. Obcaecati magnam eligendi
-                  dignissimos et, nihil aliquid facilis quas!</p>
-                <h6>About</h6>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, minus ex. Obcaecati magnam eligendi
-                  dignissimos et, nihil aliquid facilis quas!</p>
+                <h4 class="card-title text-decoration-underline">Company Name</h4>
+                <p class="card-text ps-5">Shonar Bangla Music
+                </p>
+                <h4 class="text-decoration-underline">Band Location:</h4>
+                <p class="ps-5">
+                  Bogura, Rajshahi Division, Bangladesh
+                </p>
+                <h4 class="text-decoration-underline">Song Type:</h4>
+                <p class="ps-5">Folk, Rock, Fusion</p>
+                
               </div>
             </div>
           </div>
