--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div class="container">
         <h2 class="mb-4 text-center"><span class="heading-border">Band Details</span></h2>
         <div class="row">
-          <div class="col-md-4 mb-2">
+          <div class="col-md-6 mb-2">
             <img class="img-fluid" src="img/details/details.jpg" alt="Band Owner">
             <h4 class="text-center">Head of Institute</h4>
           </div>
-          <div class="col-md-8 mb-2 ps-5">
+          <div class="col-md-6 mb-2 ps-5">
             <h4>Band Location:</h4>
             <p class="ps-5">
               Bogura, Rajshahi Division, Bangladesh
@@ -113,11 +113,11 @@
         <div class="row">
           <div class="col-md-6">
             <img src="img/feedback/feedback-1.jpg" class="rounded-circle mb-2" alt="Customer 1">
-            <p>"I am very satisfied."</p>
+            <p>"Catchy melody, strong vocals"</p>
           </div>
           <div class="col-md-6">
             <img src="img/feedback/feedback-2.jpg" class="rounded-circle mb-2" alt="Customer 2">
-            <p>"Overall: Delicious! Highly recommend"</p>
+            <p>"Tight rhythm section, good energy"</p>
           </div>
         </div>
       </div>
