--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   </main>
 
   <!-- Footer  -->
-  <footer class="footer">
+  <footer class="text-center py-3">
     <p>Current Date & Time = <span id="dateTime"></span></p>
   </footer>
 
