--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
   <!-- Main content  -->
   <main>
     <!-- Contact -->
-    <section class="contact-form">
+    <section class="contact-form py-4">
       <div class="container">
         <h2 class="text-center mb-4"><span class="heading-border">Contact Form</span></h2>
         <form>
