--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Main content  -->
   <main>
     <!-- Band Details  -->
-    <section class="py-5">
+    <section class="band-details py-4">
       <div class="container">
         <h2 class="mb-4 text-center"><span class="heading-border">Band Details</span></h2>
         <div class="row">
@@ -65,7 +65,7 @@
     </section>
 
     <!-- Members Profile -->
-    <section class="member-profile bg-success-subtle">
+    <section class="member-profile py-4 bg-success-subtle">
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">Members Profile</span></h2>
         <div class="row">
@@ -107,7 +107,7 @@
     </section>
 
     <!-- Fans Feedback  -->
-    <section class="customer-feedback text-center">
+    <section class="fans-feedback py-4 text-center">
       <div class="container">
         <h2 class="mb-4"><span class="heading-border">Fans Feedback</span></h2>
         <div class="row">
@@ -124,7 +124,7 @@
     </section>
 
     <!-- Gallery  -->
-    <section class="gallery text-center">
+    <section class="gallery py-4 text-center">
       <div class="container">
         <h2 class="mb-4"><span class="heading-border">Gallery</span></h2>
         <div class="row">
