--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <!-- Main content  -->
   <main>
     <!-- Stuff Profile -->
-    <section class="member-profile bg-success-subtle">
+    <section class="staff-profile py-4 bg-success-subtle">
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">Stuff Profile</span></h2>
         <div class="row">
@@ -87,7 +87,7 @@
     </section>
 
     <!-- About Company  -->
-    <section class="about-company">
+    <section class="about-company py-4">
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">About Company</span></h2>
         <div class="row">
