--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </section>
 
     <!-- Members Profile -->
-    <section class="member-profile py-4 bg-success-subtle">
+    <!-- <section class="member-profile py-4 bg-success-subtle">
       <div class="container">
         <h2 class="text-center section-title"><span class="heading-border">Members Profile</span></h2>
         <div class="row">
@@ -75,7 +75,8 @@
               <div class="card-body">
                 <h5 class="card-title text-center">Vocal: Sabina Yasmin</h5>
                 <p class="card-text card-text-justify">
-                  She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on delivering a clear and compelling vocal performance.
+                  She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on
+                  delivering a clear and compelling vocal performance.
                 </p>
               </div>
             </div>
@@ -86,7 +87,8 @@
               <div class="card-body">
                 <h5 class="card-title text-center">Guitar: Rony Khan</h5>
                 <p class="card-text card-text-justify">
-                  He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.
+                  He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature
+                  his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.
                 </p>
               </div>
             </div>
@@ -97,14 +99,37 @@
               <div class="card-body">
                 <h5 class="card-title text-center">Drums: Jamal Hossain</h5>
                 <p class="card-text card-text-justify">
-                  He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his ability to create a groove that complements the melody and other instruments.
+                  He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his
+                  ability to create a groove that complements the melody and other instruments.
                 </p>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <!-- Member Profile without CSS Framework  -->
+    <div class="members-Profile">
+      <h2>Members Profile</h2>
+      <ul class="profile-list">
+          <li class="profile-item">
+              <img src="img/profile/member-1.jpg" alt="Vocal: Sabina Yasmin">
+              <h2>Vocal: Sabina Yasmin</h2>
+              <p>She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on delivering a clear and compelling vocal performance.</p>
+          </li>
+          <li class="profile-item">
+              <img src="img/profile/member-2.jpg" alt="Guitar: Rony Khan">
+              <h2>Guitar: Rony Khan</h2>
+              <p>He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.</p>
+          </li>
+          <li class="profile-item">
+              <img src="img/profile/member-3.jpg" alt="Drums: Jamal Hossain">
+              <h2>Drums: Jamal Hossain</h2>
+              <p>He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his ability to create a groove that complements the melody and other instruments.</p>
+          </li>
+      </ul>
+  </div>
 
     <!-- Fans Feedback  -->
     <section class="fans-feedback py-4 text-center">
