--- a/about.html
+++ b/about.html
@@ -55,6 +55,13 @@
                   She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on
                   delivering a clear and compelling vocal performance.
                 </p>
+                <h5>
+                  Contact:
+                </h5>
+                <ul>
+                  <li>Phone: +880 1798 543210</li>
+                  <li>Email: sabina.yasmin@shonarbanglamusic.com</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -67,6 +74,13 @@
                   He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature
                   his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.
                 </p>
+                <h5>
+                  Contact:
+                </h5>
+                <ul>
+                  <li>Phone: +880 1798 543210</li>
+                  <li>Email: rony.khan@shonarbanglamusic.com</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -79,6 +93,13 @@
                   He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his
                   ability to create a groove that complements the melody and other instruments.
                 </p>
+                <h5>
+                  Contact:
+                </h5>
+                <ul>
+                  <li>Phone: +880 1798 543210</li>
+                  <li>Email: jamal.hossain@shonarbanglamusic.com</li>
+                </ul>
               </div>
             </div>
           </div>
