--- a/index.html
+++ b/index.html
@@ -113,23 +113,26 @@
     <div class="members-Profile">
       <h2>Members Profile</h2>
       <ul class="profile-list">
-          <li class="profile-item">
-              <img src="img/profile/member-1.jpg" alt="Vocal: Sabina Yasmin">
-              <h2>Vocal: Sabina Yasmin</h2>
-              <p>She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on delivering a clear and compelling vocal performance.</p>
-          </li>
-          <li class="profile-item">
-              <img src="img/profile/member-2.jpg" alt="Guitar: Rony Khan">
-              <h2>Guitar: Rony Khan</h2>
-              <p>He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature his guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.</p>
-          </li>
-          <li class="profile-item">
-              <img src="img/profile/member-3.jpg" alt="Drums: Jamal Hossain">
-              <h2>Drums: Jamal Hossain</h2>
-              <p>He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his ability to create a groove that complements the melody and other instruments.</p>
-          </li>
+        <li class="profile-item">
+          <img src="img/profile/member-1.jpg" alt="Vocal: Sabina Yasmin">
+          <h2>Vocal: Sabina Yasmin</h2>
+          <p>She would be responsible for singing the melody and lyrics of the song. Her demo track might focus on
+            delivering a clear and compelling vocal performance.</p>
+        </li>
+        <li class="profile-item">
+          <img src="img/profile/member-2.jpg" alt="Guitar: Rony Khan">
+          <h2>Guitar: Rony Khan</h2>
+          <p>He would play the guitar parts, which could include chords, riffs, and solos. The demo might feature his
+            guitar parts prominently, establishing the song's harmonic foundation and rhythmic drive.</p>
+        </li>
+        <li class="profile-item">
+          <img src="img/profile/member-3.jpg" alt="Drums: Jamal Hossain">
+          <h2>Drums: Jamal Hossain</h2>
+          <p>He would lay down the drum track, providing the song's rhythm and pulse. The demo might showcase his
+            ability to create a groove that complements the melody and other instruments.</p>
+        </li>
       </ul>
-  </div>
+    </div>
 
     <!-- Fans Feedback  -->
     <section class="fans-feedback py-4 text-center">
